--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Dharun</h1>
+    <h1>Ns lover</h1>
     <img width="500px" src="ns200.jpg" alt="">
     <p>my favrite bike</p>
 </body>
