--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Ns lover</h1>
     <img width="500px" src="ns200.jpg" alt="">
     <p>my favrite bike</p>
-</body>
+    <p>price:Bajaj pulser ns200 price for its variant- pulser ns200 bluetooth starts at Rs. 1,39,880</p>
+</body
 </html>
